--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <header>
+    <header id="header">
         <nav>
             <ul>
                 <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -52,7 +53,6 @@
                 <button type="submit">Subcribe</button>
             </form>
         </div>
-
 
         <div class="page flex">
             <div id="content">
@@ -205,10 +205,76 @@
                     </ul>
                 </div>
 
+                <div id="ad">
+                    <h3 class="asideTitle">Advertise</h3>
+                    <div>
+                        <div>Your AD Here</div>
+                    </div>
+                </div>
+
+                <div id="tag">
+                    <h3 class="asideTitle">Tags</h3>
+                    <ul class="flex">
+                        <li>Fashion</li>
+                        <li>New York</li>
+                        <li>London</li>
+                        <li>Hats</li>
+                        <li>Norway</li>
+                        <li>Sweaters</li>
+                        <li>Ideas</li>
+                        <li>Ideas</li>
+                        <li>Deals</li>
+                        <li>Accessories</li>
+                        <li>News</li>
+                        <li>Clothing</li>
+                        <li>Shopping</li>
+                        <li>Jeans</li>
+                        <li>Trends</li>
+                    </ul>
+                </div>
+
+                <div id="inspiration">
+                    <h3 class="asideTitle">Inspiration</h3>
+                    <div class="grid">
+                        <img src="img/jeans.jpg" alt="">
+                        <img src="img/avatar_hat.jpg" alt="">
+                        <img src="img/team1.jpg" alt="">
+                        <img src="img/team4.jpg" alt="">
+                    </div>
+                </div>
+
+                <div id="follow">
+                    <h3 class="asideTitle">Follow Me</h3>
+                    <ul class="flex">
+                        <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-snapchat"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-flickr"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+
+                <div id="sub">
+                    <h3 class="asideTitle">Subcribe</h3>
+                    <form autocomplete="off">
+                        <p>Enter your e-mail below and get notified on the latest blog posts.
+                        </p>
+                        <input type="email" placeholder="Enter e-mail" required>
+                        <button type="submit">Subcribe</button>
+                    </form>
+                </div>
+
             </aside>
 
             
         </div>
     </main>
+
+    <footer>
+        <a href="#header"><i class="fa-solid fa-up-long"></i> To The Top</a>
+        <p>Power By <a href="#">W3.css</a></p>
+    </footer>
 </body>
+
 </html>
