--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         </nav>
         
         <div class="intro">
-            <h1>JANE BLOGLIFE</h1>
+            <h1>JADE BLOGLIFE</h1>
             <p>
-                Welcome to the blog of <span>Jane's world</span> </p>
+                Welcome to the blog of <span>Jade's world</span> </p>
         </div>
 
         <div class="img">
             <img src="img/z4708975160508_ea445e79b8607f808219e3cdc6a9faed.jpg" alt="">
             <div class="content">
-                <p>Jane's</p>
+                <p>Jade's</p>
                 <p>FASHION BLOG</p>
                 <button>SUBSCRIBE</button>
             </div>
